# raycast_api_proxy

./: .gitignore  CHANGELOG.md  Dockerfile  README.ja.md  README.md  README.zh.md  config.example.yml  custom_mapping.yml.example  docker-compose.yml  local_docker.sh  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml  release.yml
app/: http.py  main.py  middleware.py  models.py  sync.py  utils.py
app/models/: anthropic_provider.py  gemini_provider.py  openai_provider.py
data/: me.json
raycast_proxy/: __init__.py  cert_gen.py  cli.py  logging_config.py  main.py  middleware.py  models.py  sync.py  utils.py
raycast_proxy/models/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
scripts/: cert_gen.py  entrypoint.sh
tests/: __init__.py  test_endpoints.py  test_gemini.py  test_openai.py
