
[project]
name = "raycast_backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Yufei Kang", email = "kou.uhi.x@gmail.com"},
]
dependencies = [
    "fastapi>=0.95.1",
    "openai>=1.3.6",
    "google-generativeai>=0.4.0",
    "httpx>=0.24.0",
    "uvicorn>=0.22.0",
    "websockets>=12.0",
    "asyncio>=3.4.3",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true


[tool.pdm.dev-dependencies]
dev = [
    "black>=24.1.1",
]
