
[project]
name = "raycast_backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Yufei Kang", email = "kou.uhi.x@gmail.com"},
]
dependencies = [
    "fastapi>=0.95.1",
    "openai>=1.3.6",
    "google-generativeai>=0.8.3",
    "httpx>=0.24.0",
    "uvicorn[standard]>=0.30.1",
    "pyyaml>=6.0.2",
    "jsonpath-ng>=1.6.1",
    "anthropic>=0.29.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true


[tool.pdm.dev-dependencies]
dev = [
    "black>=24.1.1",
    "cryptography>=42.0.7",
    "mitmproxy>=0.14.0",
]


[tool.pdm.scripts]
# generate cert by ./scripts/cert_gen.py
cert_gen = "scripts/cert_gen.py  --domain backend.raycast.com --out ./cert"